SERVER-10231 disallow creation of indexes on system.indexes

Conflicts:
	src/mongo/db/index.cpp
	src/mongo/db/namespacestring.h